--- a/src/blocks/block-sharing/styles/style.scss
+++ b/src/blocks/block-sharing/styles/style.scss
@@ -243,9 +243,6 @@
 }
 
 @media only screen and (max-width: 667px) {
-	.c9-block-sharing .c9-share-list .c9-social-text {
-		font-size: 1.6rem;
-	}
 
 	.c9-block-sharing.c9-share-icon-only a {
 		min-width: 33px;
