--- a/src/blocks/block-vertical-tabs/styles/style.scss
+++ b/src/blocks/block-vertical-tabs/styles/style.scss
@@ -23,7 +23,7 @@
 	font-size: 1.5em;
 	padding: 13px 20px;
 	font-weight: 700;
-	letter-spacing: .09em;
+	letter-spacing: .005em;
 	text-decoration: none;
 }
 
